<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">AFR ERP</string>
    <string name="str_Version">7.2.8</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Welcome to Africell ERP system</string>
    <string name="strEmpty"></string>
    <string name="strActivity_Login">AFR DRC ERP - Login</string>
    <string name="Strlogin">Login</string>
    <string name="strPassword">Password</string>
    <string name="title_activity_second">AFR DRC ERP</string>
    <string name="title_activity_stats">SIM Registration Stats</string>
    <string name="str_Capture1_lbl">Photo 1</string>
    <string name="title_activity_sim__registration">Enregistrement SIM</string>
    <string name="str_Personal_Info">Info Personel</string>
    <string name="str_First_Name">Prenom</string>
    <string name="str_Father_Name">Prenom du pere</string>
    <string name="str_Last_Name">Nom</string>
    <string name="str_Gender">Sex</string>
    <string name="str_Birth_Date">Date de naissance</string>
    <string name="str_Email">Email</string>
    <string name="str_Email_hint">Email@mail.com</string>
    <string name="str_Education">Education</string>
    <string name="str_Nationality">Nationalite</string>
    <string name="str_IdType">Type ID</string>
    <string name="str_ReferenceNbr">Numero Reference</string>
    <string name="str_Capture1">Prendre Photo Personelle</string>
    <string name="str_Capture2">Prendre Carte ID</string>
    <string name="str_Capture3">Prendre Carte ID 2</string>
    <string name="str_Capture4">Prendre Photo de contrat</string>
    <string name="str_ResidenceAddress">Adresse</string>
    <string name="str_Town">Cite</string>
    <string name="str_Street">Rue</string>
    <string name="str_Occupation">Occupation</string>
    <string name="str_OccupationCategory">Category</string>
    <string name="str_OccupationSubCategory">Sub Category</string>
    <string name="str_Employer">Employer</string>
    <string name="str_SIMInfo">SIM Info</string>
    <string name="str_NDC">Code Reseau</string>
    <string name="str_MSISDN">MSISDN</string>
    <string name="str_MSISDNHint">1234567</string>
    <string name="str_ICC">CodeBar Scan</string>
    <string name="str_ICCHint">12345678</string>
    <string name="str_Upload">Uploader</string>
    <string name="str_Query">Requete</string>
    <string name="str_Birth_Date_fix">Birth Date</string>
    <string name="str_get_photo">Prendre Photo</string>
    <string name="str_check_availability">Check Availability</string>
    <string name="str_create_msisdn">Create MSISDN</string>
    <string name="str_TableAgent">Table Agent</string>
    <string name="str_FromICC">From ICC</string>
    <string name="str_TillICC">Till ICC</string>
    <string name="RegistrationType">Registration Type</string>
    <string name="RegistrationType1">National ID</string>
    <string name="RegistrationType2">Fingerprint</string>
    <string name="fingerprint">Fingerprint Device</string>
    <string name="take_finger">Prendre Empreinte</string>
    <string name="fps_sn">Fingerprint device serial number is <xliff:g>%1$s</xliff:g>.</string>
    <string name="fps_fw">Fingerprint device firmware version is <xliff:g>%1$s</xliff:g>.</string>
    <string name="fp_collect_info">Single fingerprint collection information:</string>
    <string name="capture">Capture image:</string>
    <string name="extract">Extract feature:</string>
    <string name="generalize">Make template:</string>
    <string name="verify">Verify or identify:</string>
    <string name="enroll_fp">Scan finger</string>
    <string name="verify_fp">Verify</string>
    <string name="identify_fp">Identify</string>
    <string name="clear_fp_db">Clear database</string>
    <string name="show_fp">Show image</string>
    <string name="press_finger">Please press finger on fingerprint device.</string>
    <string name="enrolling">Enrolling fingerprint to database…</string>
    <string name="verifying">Verifying fingerprint…</string>
    <string name="identifying">Identify fingerprint…</string>
    <string name="fingerprint_device_open_success">Fingerprint device open success!</string>
    <string name="fingerprint_device_open_failed">Fingerprint device open failed!</string>
    <string name="fingerprint_device_close_success">Fingerprint device close success!</string>
    <string name="fingerprint_device_close_failed">Fingerprint device close failed!</string>
    <string name="fingerprint_device_power_on_failed">Fingerprint device power on failed!</string>
    <string name="fingerprint_device_power_off_failed">Fingerprint device power off failed!</string>
    <string name="algorithm_initialization_failed">Algorithm initialization failed!</string>
    <string name="algorithm_cleanup_failed">Algorithm cleanup failed!</string>
    <string name="not_done">Not done yet</string>
    <string name="capture_image_success">Capture fingerprint image success!</string>
    <string name="capture_image_failed">Capture fingerprint image failed!</string>
    <string name="enroll_failed_because_of_extract_feature">Enroll failed because extract feature return error!</string>
    <string name="enroll_failed_because_of_make_template">Enroll failed because make template return error!</string>
    <string name="enroll_failed_because_of_get_id">Enroll failed because get free ID return error!</string>
    <string name="enroll_failed_because_of_error">Enroll failed!</string>
    <string name="enroll_success">Enroll success! The enrolled fingerprint ID is </string>
    <string name="verify_failed_because_of_extract_feature">Verify failed because extract feature return error!</string>
    <string name="verify_failed_because_of_error">Verify failed!</string>
    <string name="fingerprint_not_match">Fingerprint does not match!</string>
    <string name="fingerprint_match">Fingerprint match!</string>
    <string name="identify_failed_because_of_extract_feature">Identify failed because extract feature return error!</string>
    <string name="identify_failed_because_of_error">Identify failed!</string>
    <string name="identify_match">Identify success! The matched fingerprint ID is </string>
    <string name="clear_fingerprint_database_success">Clear fingerprint database success!</string>
    <string name="clear_fingerprint_database_failed">Clear fingerprint database failed!</string>
    <string name="idcard">China Second-Generation Identity Card Reader</string>
    <string name="idcard_sn">IDCard device serial number is <xliff:g>%1$s</xliff:g>.</string>
    <string name="name">Name:</string>
    <string name="sex">Sex:</string>
    <string name="nationality">Nationality:</string>
    <string name="birthday">Birthday:</string>
    <string name="address">Address</string>
    <string name="number">ID card number:</string>
    <string name="authority">Authority:</string>
    <string name="valid_date">Valid date:</string>
    <string name="fp_info">Fingerprint:</string>
    <string name="read_idcard">Read ID card</string>
    <string name="read_idcard_id">Read ID card ID</string>
    <string name="place_idcard">Please place ID card near the antenna.</string>
    <string name="id_card_reader_open_success">ID card reader open success!</string>
    <string name="id_card_reader_open_failed">ID card reader open failed!</string>
    <string name="id_card_reader_close_success">ID card reader close success!</string>
    <string name="id_card_reader_close_failed">ID card reader close failed!</string>
    <string name="id_card_reader_power_on_failed">ID card reader power on failed!</string>
    <string name="id_card_reader_power_off_failed">ID card reader power off failed!</string>
    <string name="id_card_read_success">Read ID card success!</string>
    <string name="id_card_not_exist_or_reread">Please remove ID card and then put it back to card reading area!</string>
    <string name="id_card_read_failed">Read ID card failed!</string>
    <string name="id_card_read_id_success">Read ID card ID success! ID is </string>
    <string name="id_card_read_id_failed">Read ID card ID failed!</string>
    <string name="long_term">Long-term</string>
    <string name="exist">Exist</string>
    <string name="not_exist">Not exist</string>
    <string name="iccard">IC Card Reader</string>
    <string name="read_iccard">Read IC card</string>
    <string name="write_iccard">Write IC card</string>
    <string name="place_iccard">Please place card near the antenna.</string>
    <string name="ic_card_reader_open_success">IC card reader open success!</string>
    <string name="ic_card_reader_open_failed">IC card reader open failed!</string>
    <string name="ic_card_reader_close_success">IC card reader close success!</string>
    <string name="ic_card_reader_close_failed">IC card reader close failed!</string>
    <string name="ic_card_reader_power_on_failed">IC card reader power on failed!</string>
    <string name="ic_card_reader_power_off_failed">IC card reader power off failed!</string>
    <string name="ic_card_validate_key_failed">Validate key failed!</string>
    <string name="ic_card_read_success">Read IC card success!</string>
    <string name="ic_card_read_failed">Read IC card failed!</string>
    <string name="ic_card_write_success">Write IC card success!</string>
    <string name="ic_card_write_failed">Write IC card failed!</string>
    <string name="hardware_barcode">Hardware Barcode Scanner</string>
    <string name="software_barcode">Software Barcode Scanner</string>
    <string name="firmware_version">Firmware version:</string>
    <string name="serial_number">Serial number:</string>
    <string name="data_output">Data output:</string>
    <string name="scan_barcode">Scan barcode</string>
    <string name="multi_scan">Scan multiple barcode</string>
    <string name="barcode_format">Barcode format:</string>
    <string name="barcode_size">Barcode size (bytes):</string>
    <string name="align_barcode">Please align the scan window to the barcode.</string>
    <string name="hardware_barcode_scanner_open_success">Hardware barcode scanner open success!</string>
    <string name="hardware_barcode_scanner_open_failed">Hardware barcode scanner open failed!</string>
    <string name="hardware_barcode_scanner_close_success">Hardware barcode scanner close success!</string>
    <string name="hardware_barcode_scanner_close_failed">Hardware barcode scanner close failed!</string>
    <string name="hardware_barcode_scanner_power_on_failed">Hardware barcode scanner power on failed!</string>
    <string name="hardware_barcode_scanner_power_off_failed">Hardware barcode scanner power off failed!</string>
    <string name="barcode_scan_success">Barcode scan success!</string>
    <string name="barcode_scan_failed">Barcode scan failed!</string>
    <string name="unsupported_encoding">The data from barcode could not change to UTF-8 encoding!</string>
    <string name="barcode_scanned"><xliff:g>%1$d</xliff:g> barcode has been scanned.</string>
    <string name="barcode_scanned_none">None barcode has been scanned.</string>
    <string name="printer">Printer</string>
    <string name="print_test_page">Print test page</string>
    <string name="printing">Printing…</string>
    <string name="print_success">Print success!</string>
    <string name="print_failed">Print failed!</string>
    <string name="printer_open_success">Printer open success!</string>
    <string name="printer_open_failed">Printer open failed!</string>
    <string name="printer_close_success">Printer close success!</string>
    <string name="printer_close_failed">Printer close failed!</string>
    <string name="printer_power_on_failed">Printer power on failed!</string>
    <string name="printer_power_off_failed">Printer power off failed!</string>
    <string name="info_error">Error</string>
    <string name="operation_successful">Operation is successful!</string>
    <string name="error_operation_failed">Operation failed!</string>
</resources>