<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
  android:layout_width="match_parent" 
  android:layout_height="match_parent"
  >

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="1800dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
    
    
	<TextView
        android:id="@+id/lblNDC"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:text="@string/str_NDC"
		android:textSize="16sp" 
        />     
        
    <Spinner
        android:id="@+id/spinnerNDC"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_below="@+id/lblNDC"
        android:padding="5dip"
        android:background="@drawable/rounded_edittext"        
        />    
    
	<TextView
        android:id="@+id/lblMSISDN"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:text="@string/str_MSISDN"
		android:textSize="16sp" 
        android:layout_below="@+id/spinnerNDC"/>    
    
    <EditText
        android:id="@+id/txtMSISDN"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:maxLength="7"  
        android:inputType="number"
        android:layout_below="@+id/lblMSISDN"
        android:padding="5dip"
        android:background="@drawable/rounded_edittext"        
        />    
    
    <Button
        android:id="@+id/btnCapture1"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:onClick="CaptureContractPhoto"
        android:text="@string/str_Capture4"
        android:textSize="12sp" 
        android:layout_below="@+id/txtMSISDN"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_button" 
        />    
    
    <ImageView 
        android:id="@+id/camera_personal_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"   
        android:contentDescription="@string/str_Capture1"
        android:layout_below="@+id/btnCapture1"/>  
        
    <Button
        android:id="@+id/btnUpload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:onClick="onUploadClick"
        android:text="@string/str_Upload"
        android:layout_below="@+id/camera_personal_image"
        android:background="@drawable/rounded_button" 
        />    
    
    
    <TextView
        android:id="@+id/lblError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strEmpty"
        android:textSize="14sp"
        android:textStyle="bold" 
        android:layout_below="@+id/btnUpload"
        android:textColor="@color/opaque_red"/>      
    
    
</RelativeLayout>

</ScrollView>
    