<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
  android:layout_width="match_parent" 
  android:layout_height="match_parent"
  >

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="450dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <Button
        android:id="@+id/btnScanBarCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/str_ICC"
        android:onClick="onScanBarcodeClick"
        /> 
        
    <EditText
        android:id="@+id/txtICC"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:maxLength="20"  
        android:inputType="number"
        android:enabled="false"
        android:layout_below="@+id/btnScanBarCode"
        />     
        
	<TextView
        android:id="@+id/lblNDC"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:text="@string/str_NDC"
		android:textSize="16sp" 
        android:layout_below="@+id/txtICC"/>     
        
    <Spinner
        android:id="@+id/spinnerNDC"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_below="@+id/lblNDC"/>    
    
	<TextView
        android:id="@+id/lblMSISDN"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:text="@string/str_MSISDN"
		android:textSize="16sp" 
        android:layout_below="@+id/spinnerNDC"/>    
    
    <EditText
        android:id="@+id/txtMSISDN"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:maxLength="6"  
        android:inputType="number"
        android:layout_below="@+id/lblMSISDN"/> 	    
        
    <Button
        android:id="@+id/btnCheckMSISDNAvailability"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/str_check_availability"
        android:onClick="onCheckMSISDNAvailabilityClick"
        android:layout_below="@+id/txtMSISDN"
        />    

    <Button
        android:id="@+id/btnCreateMSISDN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/str_create_msisdn"
        android:onClick="onCreateMSISDNClick"
        android:layout_below="@+id/btnCheckMSISDNAvailability"
        />        

    <TextView
        android:id="@+id/lblError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strEmpty"
        android:textSize="14sp"
        android:textStyle="bold" 
        android:layout_below="@+id/btnCreateMSISDN"
        android:textColor="@color/opaque_red"/>    
        
	<TextView
        android:id="@+id/lblInfo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:text="@string/strEmpty"
		android:textSize="14sp" 
        android:layout_below="@+id/lblError"/>    
    
</RelativeLayout>

</ScrollView>
