<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
  android:layout_width="match_parent" 
  android:layout_height="match_parent"
  >

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="1800dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
 
	<TextView
        android:id="@+id/lblTableAgent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:text="@string/str_TableAgent"
		android:textSize="16sp" 
        />    
    
    <EditText
        android:id="@+id/txtTableAgent"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:layout_below="@+id/lblTableAgent"
        android:padding="5dip"
        android:background="@drawable/rounded_edittext"        
        /> 	
        
   <Button
        android:id="@+id/validateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onValidateClick"
        android:text="Validate" 
        android:layout_below="@+id/txtTableAgent"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_button" 
        />
    
    <TextView
        android:id="@+id/lblFromICC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_FromICC"
        android:textSize="16sp" 
        android:layout_below="@+id/validateButton"/>
        
    <EditText
        android:id="@+id/txtFromICC"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"     
        android:maxLength="16" 
        android:layout_below="@+id/lblFromICC" 
		android:padding="5dip"
        android:background="@drawable/rounded_edittext"         
        />
	
    <TextView
        android:id="@+id/lblTillICC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_TillICC"
        android:textSize="16sp" 
        android:layout_below="@+id/txtFromICC"/>
        
    <EditText
        android:id="@+id/txtTillICC"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"      
        android:maxLength="16" 
        android:layout_below="@+id/lblTillICC" 
		android:padding="5dip"
        android:background="@drawable/rounded_edittext"         
        />
    
    <Button
        android:id="@+id/supplyButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onSupplyClick"
        android:text="Supply" 
        android:layout_below="@+id/txtTillICC"
        android:layout_marginTop="15dp"
		android:background="@drawable/rounded_button"
        />
    
    
    <TextView
        android:id="@+id/lblError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strEmpty"
        android:textSize="14sp"
        android:textStyle="bold" 
		android:layout_below="@+id/supplyButton"
        android:textColor="@color/opaque_red"/>    
    
    
</RelativeLayout>

</ScrollView>
    