<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="sl.Africell.afr_sl_registration.loginactivity" >

    <!--
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="tetete"
    android:id="@+id/lblspeed"/>

    <Button
        android:layout_below="@+id/lblspeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnStart"
        android:text="Start"
        />
-->
    <TextView
        android:id="@+id/lblWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/hello_world" />

    <TextView
        android:id="@+id/lblWelcome1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="ssfs"
        android:layout_below="@+id/lblWelcome"/>    
    
    <TextView
        android:id="@+id/lblLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Strlogin"
        android:textSize="18sp"
        android:textStyle="bold" 
        android:layout_below="@+id/lblWelcome1"/>

    <EditText
        android:id="@+id/txtLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblLogin"
        android:ems="10"
        android:hint="@string/Strlogin"
        android:inputType="text"
        android:maxLength="100" 
        android:padding="5dip"
        android:background="@drawable/rounded_edittext"         
        />
    
    <TextView
        android:id="@+id/lblPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strPassword"
        android:textSize="18sp"
        android:textStyle="bold" 
        android:layout_below="@+id/txtLogin"/>

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblPassword"
        android:ems="10"
        android:hint="@string/strPassword"
        android:inputType="textPassword"
        android:maxLength="100" 
        android:padding="5dip"
        android:background="@drawable/rounded_edittext"         
        />   
        
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtPassword"
        android:onClick="onButtonLoginClicked"
        android:text="@string/Strlogin" 
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_button"        
        />      

    <TextView
        android:id="@+id/lblLoginResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strEmpty"
        android:textSize="14sp"
        android:textStyle="bold" 
        android:layout_below="@+id/btnLogin"
        android:textColor="@color/opaque_red"/>    
   
    
</RelativeLayout>
