<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="sl.Africell.afr_sl_registration.typeactivity"
    >

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_below="@+id/rbtRegistrationType"
        android:onClick="onButtonOkClicked"
        android:text="OK"
        android:gravity="center"
        android:scaleType="centerInside"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_button"
        />

    <TextView
        android:id="@+id/lblRegistrationType"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/RegistrationType"
        android:textColor="@color/opaque_red"
        android:textSize="16sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RadioGroup
        android:id="@+id/rbtRegistrationType"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:textSize="16sp"
        android:orientation="horizontal"
        android:layout_below="@+id/lblRegistrationType">

        <RadioButton
            android:id="@+id/lblRegistrationType1"
            android:layout_width="137dp"
            android:layout_height="wrap_content"
            android:text="@string/RegistrationType1"
            android:checked="true"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton android:id="@+id/lblRegistrationType2"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/RegistrationType2"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>


</RelativeLayout>
</ScrollView>